--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "javascript"
   ],
   "dependencies": {
-    "broccoli-kitchen-sink-helpers": "~0.2.5",
-    "rimraf": "~2.2.8",
-    "chalk": "~0.5.1",
-    "broccoli": "~0.13.3"
+    "broccoli-kitchen-sink-helpers": "^0.2.5",
+    "rimraf": "^2.2.8",
+    "chalk": "^0.5.1",
+    "broccoli": "^0.16.3"
   },
   "devDependencies": {
-    "mocha": "~2.1.0",
-    "rimraf": "~2.2.8",
-    "expect.js": "~0.3.1"
+    "mocha": "^2.1.0",
+    "rimraf": "^2.2.8",
+    "expect.js": "^0.3.1"
   }
 }
